--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog.min.css">
+    <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog-theme-default.css">
     <link rel="stylesheet" href="css/app.css">
     <style>
         .navbar { border-radius:0; }
@@ -18,11 +20,12 @@
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/ngDialog/js/ngDialog.min.js"></script>
     <script src="mpegTs.js"></script>
-    <script src="controllers/scotches.js"></script>
     <script src="routes/router.js"></script>
     <script src="factories/sources.js"></script>
     <script src="controllers/sources.js"></script>
+    <script src="directives/sources.js"></script>
     <div ng-include src="'views/global/navbar.html'"></div>
 
 </head>
